# whatsapp-auto

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
whatsapp/: exception.py  main.py
whatsapp_auto/: __init__.py  main.py
